Corrected some typos and sentence structures

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "WJKHKZKK",
         "Yubi",
         "Yubico",
-        "ansibleadmin"
+        "ansibleadmin",
+        "mbadwa"
     ]
 }
